--- a/src/index.css
+++ b/src/index.css
@@ -27,5 +27,13 @@ body {
 .container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+}
+
+.content-container {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
